Correct handling of zero-width joiners and non-joiners. Bug 110497. r=ftang, sr=attinasi